<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    tools:context="com.example.diploma.MainPage"
    android:name=".MainPage"
    android:exported="true">
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout2"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/File" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/About" />
    </com.google.android.material.tabs.TabLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/AddBase"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dip"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/OpenBase"
        android:background="@android:color/holo_blue_light"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dip"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/analysis"
        android:background="@android:color/holo_blue_light"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="210dip" />

    <Button
        android:id="@+id/button3"
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="6dp"
        android:text="@string/Formulas"
        android:background="@android:color/holo_blue_light"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="270dip" />

    <Button
        android:id="@+id/button5"
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="30dp"
        android:text="@string/Exit"
        android:background="@android:color/holo_blue_light"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="330dip" />
</RelativeLayout>