<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    tools:context="com.example.diploma.activity_base">
    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:divider="#FFCC00"
        android:dividerHeight="4dp"
        android:layout_alignParentStart="true">
    </ListView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/esep"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/shortages" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="210dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/jauap" />
    <SearchView
        android:id="@+id/search_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/izdeu"
        android:layout_marginStart="150dp"
        android:background="@android:color/holo_blue_light"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"  />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bosatu"
        android:background="@android:color/holo_blue_light"
        android:layout_marginStart="240dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"  />
</RelativeLayout>